== Changelog

All notable changes to this project will be documented in this file.

The format is based on link:https://keepachangelog.com/en/1.1.0/[Keep a
Changelog], and this project adheres to
link:https://semver.org/spec/v2.0.0.html[Semantic Versioning].

=== [Unreleased]

==== Added

* Jacoco test coverage
* Test with Junit5
* Change FreeMarker version section in README
* SonarCloud scan
* CONTRIBUTING.adoc
* License notice and documentation
* Special thanks section
* SonarCloud quality gate and coverage badges

=== [0.1.9] - 2025-01-11

==== Added

* GitHub gradle publish workflow

=== [0.1.1] - 2025-01-10

==== Fixed

* Setup for publishing to repo central

=== [0.1.0] - 2025-01-10

==== Added

* GraalVM support for Apache FreeMarker