@@ -18,6 +18,7 @@ link:https://semver.org/spec/v2.0.0.html[Semantic Versioning].
 * License notice and documentation
 * Special thanks section
 * SonarCloud quality gate and coverage badges
+* resource-config.json
 
 === [0.1.9] - 2025-01-11
 
